--- a/docs/67faa42e.mdx
+++ b/docs/67faa42e.mdx
@@ -7,8 +7,8 @@ toc: |+
   
   {/* import-end */}
    
-<STitle>
+<STitle>The Blockquote extension enables you to use the</STitle>
 
+> HTML tag in the editor. This is great to … show quotes in the editor, you know?
 
-</STitle>
-
+> 哈哈哈哈
