--- a/docs/898fe69f.mdx
+++ b/docs/898fe69f.mdx
@@ -7,8 +7,8 @@ toc: |+
   
   {/* import-end */}
    
-<STitle>The Blockquote extension enables you to use the</STitle>
+<STitle>
 
-> HTML tag in the editor. This is great to … show quotes in the editor, you know?
 
-> 哈哈哈哈
+</STitle>
+
