--- a/docs/cbdc0a61.mdx
+++ b/docs/cbdc0a61.mdx
@@ -1,5 +1,9 @@
 ---
-toc: |+
+toc: |2
+
+    - title: "发发发"
+      url: "#h-5yr5yr5yr"
+      level: "2"
 ---
 
   {/* import-start */}
@@ -8,6 +12,6 @@ toc: |+
   {/* import-end */}
    
 <STitle>
-file2
+未命名标题
 </STitle>
 
