--- a/docs/cbdc0a61.mdx
+++ b/docs/cbdc0a61.mdx
@@ -1,9 +1,5 @@
 ---
-toc: |2
-
-    - title: "发发发"
-      url: "#h-5yr5yr5yr"
-      level: "2"
+toc: |+
 ---
 
   {/* import-start */}
@@ -12,6 +8,6 @@ toc: |2
   {/* import-end */}
    
 <STitle>
-未命名标题
+link2
 </STitle>
 
