--- a/docs/4ef11dae.mdx
+++ b/docs/4ef11dae.mdx
@@ -1,17 +1,5 @@
 ---
-toc: |2
-
-    - title: "h1 h1 h1"
-      url: "#h-h1-h1-h1"
-      level: "1"
-      children:
-        - title: "h2h2h2hh2h2"
-          url: "#h-h2h2h2hh2h2"
-          level: "2"
-          children:
-            - title: "h33h3hh3h3h3h"
-              url: "#h-h33h3hh3h3h3h"
-              level: "3"
+toc: |+
 ---
 
   {/* import-start */}
@@ -20,74 +8,5 @@ toc: |2
   {/* import-end */}
    
 <STitle>
-Quick start
 </STitle>
 
-# h1 h1 h1
-
-但是发了沙发的发掘和发的饭撒的发哈老师的反馈a
-
-## h2h2h2hh2h2
-
-说的话发过啦开始发哈了阿斯顿发独立思考和发的啥啊啥都发了说的话发
-
-### h33h3hh3h3h3h
-
-是落地后噶凤梨酥大概发i啊但是发四大皆空发噶
-
-* list 上的国防军啊说的话发
-  * 是过分就好撒了点饭嘎
-    * 说大概发哈上课了
-
-1. 有序列表
-   1. 发的哈哈的发掘啊
-      1. 说的快回复过啦是的
-         1. 说的话发了快三点饭
-
-> 这是个应用的撒反馈好啦的说发尕斯库勒蝴蝶飞过啦
-
----
-
-<SCallout>
-
-<SCalloutHeader type="tips">
-Tips
-
-</SCalloutHeader>
-
-
-<SCalloutContent>
-这个是一个callout
-
-callout tips
-
-</SCalloutContent>
-
-</SCallout>
-
-<SImage width="490px" height="417px" src="https://api.codingit.cn/static/f28af75b320288696e5c8adfb598fe79/WechatIMG115043.jpeg" alt="WechatIMG115043.jpeg" title="null" caption="这是一张图片" />
-
-<SCodeBlockTab >
-
-<SCodeBlock language="js" focus="4" filename="index.js" tabid="0">
-
-```js
-const a = [];
-const b = {};
-if(a === b) {
-return "hahahah"
-}
-```
-</SCodeBlock>
-
-<SCodeBlock language="javascript" focus="2" filename="index.css" tabid="1">
-
-```javascript
-.header {
- color: #fff;
-}
-```
-</SCodeBlock>
-
-
-</SCodeBlockTab>
