--- a/docs/cbdc0a61.mdx
+++ b/docs/cbdc0a61.mdx
@@ -1,11 +1,5 @@
 ---
-toc: 
-    - title: "Tiptap 由 50 多个独立的软件包组成。以下是您遵循更改所需的一切："
-      url: "#h-tiptap-50"
-      level: "2"
-      children:      - title: "我们将撰写有关更大更改的博客文章，并将它们保存在此处的更改日志中。"
-          url: "#h-5oir5lus5bcg5pkw5yaz5pyj5ywz5pu05asn5pu05ps555qe5y2a5a6i5pah56ug77ym5bm25bcg5a6d5lus5ld5a2y5zyo5q2k5ase55qe5pu05ps55pel5bx5lit44cc"
-          level: "3"
+toc: ''
 ---
 
 {/* import-start */}
@@ -14,16 +8,5 @@ import { SH, STitle, SImage, SCodeBlock, SCodeBlockTab, SCallout, SCalloutHeader
 {/* import-end */}
    
 <STitle>
-file
 </STitle>
 
-asdasdasdasdas
-
-## Tiptap 由 50 多个独立的软件包组成。以下是您遵循更改所需的一切：
-
-1. 检查[<u>GitHub 发布页面</u>](https://github.com/ueberdosis/tiptap/releases)以获得最佳概述。
-2. 有关更多详细信息，请访问[<u>GitHub 上的 Tiptaps CHANGELOG</u>](https://github.com/ueberdosis/tiptap/blob/main/CHANGELOG.md)。
-3. 此外，[所有包也都有](http://xn--CHANGELOG-u75noooun79bd6au40m98pca1985cpjoo28j.md)<u>一个单独的**</u>`CHANGELOG.md`**。
-4. 关注[<u>GitHub 上合并的 Pull 请求</u>](https://github.com/ueberdosis/tiptap/pulls?q=is%3Apr+is%3Aclosed)也很有帮助。
-
-### [<u>我们将撰写</u>](https://tiptap.dev/blog)有关更大更改的博客文章，并将它们保存在此处的更改日志中。
